[package]
name = "line_follower_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui-macroquad = "0.15.0"
egui-miniquad = "0.14.0"
macroquad = "0.3.25"
egui_demo_lib = "0.21.0"

[profile.release]
opt-level = 2

