[package]
name = "line_follower_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "line_follower_gui"
path = "src/app/main.rs"

[[bin]]
name = "line_follower_cli"
path = "src/cli/main.rs"

[dependencies]
egui = "0.21.0"
egui-macroquad = "0.15.0"
egui-miniquad = "0.14.0"
macroquad = "0.3.25"
egui_demo_lib = "0.21.0"
num = "0.4.0"
itertools = "0.10.5"
nalgebra = "0.32.2"
cmaes = "0.2.1"
chrono = "0.4.24"

[profile.release]
opt-level = 2

