[workspace]
members = ["linefollower_core", "linefollower_gui", "linefollower_optim_cli", "path_editor"]

[workspace.package]
authors = ["Vinícius Freitas de Almeida <vinifreitas.d.a@gmail.com>"]
edition = "2021"

[workspace.dependencies]
num = "0.4.0"
itertools = "0.10.5"
nalgebra = { version = "0.32.2", features = ["mint", "convert-mint"] }
linefollower_core = { path = "linefollower_core" }
