[package]
name = "path_editor"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
egui = { version = "0.21.0", features = ["mint", "cint", "bytemuck"] }
mint = { version = "0.5.9" }
eframe = "0.21.3"
petgraph = "0.6.3"
nalgebra = { workspace = true }
linefollower_core = { workspace = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.64"